NameResolver supporting PropertyPlaceHolder.